@@ -426,6 +426,9 @@ Working version
 
 ### Internal/compiler-libs changes:
 
+- #10512: explain the compilation strategy for switches on constructors
+  (Gabriel Scherer, review by Vincent Laviron)
+
 - #11990: Improve comments and macros around frame descriptors.
   (Nick Barnes, review by Gabriel Scherer)
 
